ChangeLog for ARQ
=================

==== ARQ 2.8.8 or 2.9.0

+ Bug fix: Handling of UNDEF in BINDINGS

+ RIOT: Better handling of file names with spaces in them for base URI. 

+ Notice: A separate LARQ module is under development - this will use Lucene 3.x.y 

+ Bug fix: RIOT: Cope with UTF-8 files with a BOM.

+ Add scope checking rules as required by SPARQL 1.1
  Illegal in SPARQL 1.1:
     Reuse of variables in assignments (i.e. "AS ?x" and ?x potentially bound)
     SELECT * {} GROUP BY (reamins legal in ARQ language)

+ Bug fix: FILTERs did not always get moved to the end of groups properly 
           (sometimes only to end of BGPs). 
           This effects some FILTER the LET combinations using the same variable.  

==== ARQ 2.8.7

SPARQL 1.1 Function library:
 + Added MD5, SHA1, SHA224, SHA256 SHA384, SHA512 functions for SPARQL 1.1
 + Added YEAR, MONTH, DAY, HOURS, MINUTES, SECONDS to SPARQL 1.1
   TIMEZONE awaiting WG discussions.
 + Added NOW() to SPARQL 1.1 - filter function like afn:now().

==== ARQ 2.8.6

** Update is now two languages: 
     strict SPARQL 1.1 Update (the default)
     enhanced language (ARQ query extensions, compatibility extensions for previous update language)
   Set Syntx.syntaxARQ_Update to access the extensions. 

+ Complete implementation of SPARQL 1.1 Query and Update (as per current draft) 
  Default query and updates languages are now SPARQL 1.1

+ Syntax extensions for W3C submission "SPARQL Update"
  http://seaborne.blogspot.com/2010/08/migrating-from-sparql-update-submission.html

+ RIOT commands (ntrig, nquads, turtle, ntriples, infer) now in package 'riotcmd'

+ Expand update API to support multiple languages
  See src-examples/arq.update.* for examples of API.

+ UpdateException now used for errors during update execution (potentially visible change)   

+ Bug fix: compound expressions involving aggregates in SELECT clause

+ Remove use of code from org.json to clarify legal position. 
