@@ -1,16 +1,5 @@
-@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>.
-@prefix : <http://localhost#>.
+@prefix : <http://example.com/data/#> .
 
-:Person
-       rdf:type :Person;
-       :age 18. 
-
-## 
-## @prefix dc:   <http://purl.org/dc/elements/1.1/> .
-## @prefix :     <http://example.org/book/> .
-## @prefix ns:   <http://example.org/ns#> .
-## 
-## :book1  dc:title  "SPARQL Tutorial" .
-## :book1  ns:price  42 .
-## :book2  dc:title  "The Semantic Web" .
-## :book2  ns:price  23 .
+<x> :p 1, 2, 3, 4 .
+<y> :p 1, "2", 3, 4 .
+<z> :p 1.0, 2.0, 3.0, 4 .
