@@ -109,7 +109,7 @@ public class RunARQ
     public static void main(String[] argv) throws Exception
     {
         
-        //arq.sparql.main("--data=D.ttl", "--query=Q.rq") ; exit(0) ;
+        arq.sparql.main("--data=D.ttl", "--query=Q.rq") ; exit(0) ;
         
         long timeout = 0 ;
         long last = 0 ;
