@@ -12,6 +12,7 @@ import com.hp.hpl.jena.graph.Node ;
 import com.hp.hpl.jena.query.ARQ ;
 import com.hp.hpl.jena.sparql.engine.binding.Binding ;
 import com.hp.hpl.jena.sparql.expr.Expr ;
+import com.hp.hpl.jena.sparql.expr.ExprEvalException ;
 import com.hp.hpl.jena.sparql.expr.NodeValue ;
 import com.hp.hpl.jena.sparql.expr.nodevalue.XSDFuncOp ;
 import com.hp.hpl.jena.sparql.function.FunctionEnv ;
@@ -84,7 +85,10 @@ public class AggAvg extends AggregatorBase
                     total = XSDFuncOp.add(nv, total) ;
             }
             else
+            {
                 ARQ.getExecLogger().warn("Evaluation error: avg() on "+nv) ;
+                throw new ExprEvalException("avg: not a number") ;
+            }
             
             if ( DEBUG ) System.out.println("avg: ("+total+","+count+")") ;
         }
@@ -93,9 +97,13 @@ public class AggAvg extends AggregatorBase
         protected void accumulateError(Binding binding, FunctionEnv functionEnv)
         {}
 
-        public NodeValue getValue()
+        @Override
+        public NodeValue getAccValue()
         {
             if ( count == 0 ) return noValuesToAvg ;
+            if ( super.errorCount != 0 )
+                //throw new ExprEvalException("avg: error in group") ; 
+                return null ;
             NodeValue nvCount = NodeValue.makeInteger(count) ;
             return XSDFuncOp.divide(total, nvCount) ;
         }
