@@ -66,7 +66,8 @@ public class AggCountVarDistinct extends AggregatorBase
         protected void accumulateError(Binding binding, FunctionEnv functionEnv)
         {}
 
-        public NodeValue getValue()            
+        @Override
+        public NodeValue getAccValue()            
         { return NodeValue.makeInteger(count) ; }
     }
 }
