@@ -120,7 +120,8 @@ public class AggGroupConcat extends AggregatorBase
         protected void accumulateError(Binding binding, FunctionEnv functionEnv)
         {}
 
-        public NodeValue getValue()
+        @Override
+        public NodeValue getAccValue()
         { return NodeValue.makeString(stringSoFar.toString()) ; }
     }
 }
