@@ -118,7 +118,8 @@ public class AggGroupConcatDistinct extends AggregatorBase
         protected void accumulateError(Binding binding, FunctionEnv functionEnv)
         {}
         
-        public NodeValue getValue()
+        @Override
+        public NodeValue getAccValue()
         { return NodeValue.makeString(stringSoFar.toString()) ; }
     }
 }
