@@ -63,7 +63,8 @@ abstract class AggMinBase extends AggregatorBase
         protected void accumulateError(Binding binding, FunctionEnv functionEnv)
         {}
 
-        public NodeValue getValue()
+        @Override
+        public NodeValue getAccValue()
         { return minSoFar ; }
     }
 }
