@@ -72,7 +72,8 @@ public class AggSampleDistinct extends AggregatorBase
         protected void accumulateError(Binding binding, FunctionEnv functionEnv)
         {}
         
-        public NodeValue getValue()
+        @Override
+        public NodeValue getAccValue()
         { return sampleSoFar ; }
     }
 }
