@@ -81,7 +81,8 @@ public class AggSum  extends AggregatorBase
         protected void accumulateError(Binding binding, FunctionEnv functionEnv)
         {}
 
-        public NodeValue getValue()
+        @Override
+        public NodeValue getAccValue()
         { return total ; }
     }
 }
