@@ -12,21 +12,12 @@
       <binding name="p">
         <literal datatype="http://www.w3.org/2001/XMLSchema#integer">4</literal>
       </binding>
-      <binding name="num">
-        <literal datatype="http://www.w3.org/2001/XMLSchema#integer">0</literal>
-      </binding>
     </result>
     <result>
-      <binding name="num">
-        <literal datatype="http://www.w3.org/2001/XMLSchema#integer">0</literal>
-      </binding>
     </result>
     <result>
       <binding name="p">
         <literal datatype="http://www.w3.org/2001/XMLSchema#integer">5</literal>
-      </binding>
-      <binding name="num">
-        <literal datatype="http://www.w3.org/2001/XMLSchema#integer">0</literal>
       </binding>
     </result>
   </results>
